:memo: updated docs

--- a/mowl/examples/OWL2Vec/OWL2Vec.ipynb
+++ b/mowl/examples/OWL2Vec/OWL2Vec.ipynb
@@ -13,19 +13,7 @@
    "execution_count": 1,
    "id": "e70e8338",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SLF4J: Class path contains multiple SLF4J bindings.\n",
-      "SLF4J: Found binding in [jar:file:/home/zhapacfp/Github/mowl/mowl/lib/slf4j-log4j12-1.7.3.jar!/org/slf4j/impl/StaticLoggerBinder.class]\n",
-      "SLF4J: Found binding in [jar:file:/home/zhapacfp/Github/mowl/mowl/lib/slf4j-simple-1.7.25.jar!/org/slf4j/impl/StaticLoggerBinder.class]\n",
-      "SLF4J: See http://www.slf4j.org/codes.html#multiple_bindings for an explanation.\n",
-      "SLF4J: Actual binding is of type [org.slf4j.impl.Log4jLoggerFactory]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../../../\")\n",
@@ -33,6 +21,8 @@
     "import torch as th\n",
     "import logging\n",
     "\n",
+    "import mowl\n",
+    "mowl.init_jvm(\"2g\")\n",
     "from mowl.datasets.ppi_yeast import PPIYeastSlimDataset\n",
     "from mowl.datasets.base import PathDataset\n",
     "\n",
@@ -105,32 +95,44 @@
      ]
     },
     {
-     "ename": "java.lang.ClassCastException",
-     "evalue": "java.lang.ClassCastException: class uk.ac.manchester.cs.owl.owlapi.OWLObjectIntersectionOfImpl cannot be cast to class org.semanticweb.owlapi.model.OWLClass (uk.ac.manchester.cs.owl.owlapi.OWLObjectIntersectionOfImpl and org.semanticweb.owlapi.model.OWLClass are in unnamed module of loader 'app')",
+     "ename": "org.semanticweb.owlapi.io.OWLOntologyInputSourceException",
+     "evalue": "org.semanticweb.owlapi.io.OWLOntologyInputSourceException: java.io.FileNotFoundException: data/mp.owl (No such file or directory)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mjava.io.FileNotFoundException\u001b[0m             Traceback (most recent call last)",
+      "File \u001b[0;32mOWLOntologyManagerImpl.java:1206\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyManagerImpl.loadOntologyFromOntologyDocument\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mOWLOntologyManagerImpl.java:1194\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyManagerImpl.loadOntologyFromOntologyDocument\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mOWLOntologyManagerImpl.java:1243\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyManagerImpl.loadOntology\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mOWLOntologyManagerImpl.java:1303\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyManagerImpl.actualParse\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mOWLOntologyFactoryImpl.java:220\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyFactoryImpl.loadOWLOntology\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mRDFXMLParser.java:70\u001b[0m, in \u001b[0;36morg.semanticweb.owlapi.rdf.rdfxml.parser.RDFXMLParser.parse\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mAbstractOWLParser.java:268\u001b[0m, in \u001b[0;36morg.semanticweb.owlapi.io.AbstractOWLParser.getInputSource\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mFileDocumentSource.java:105\u001b[0m, in \u001b[0;36morg.semanticweb.owlapi.io.FileDocumentSource.getReader\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mFileDocumentSource.java:91\u001b[0m, in \u001b[0;36morg.semanticweb.owlapi.io.FileDocumentSource.getInputStream\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mFileInputStream.java:157\u001b[0m, in \u001b[0;36mjava.io.FileInputStream.<init>\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mFileInputStream.java:219\u001b[0m, in \u001b[0;36mjava.io.FileInputStream.open\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mFileInputStream.java:-2\u001b[0m, in \u001b[0;36mjava.io.FileInputStream.open0\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mjava.io.FileNotFoundException\u001b[0m: java.io.FileNotFoundException: data/mp.owl (No such file or directory)",
+      "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[0;32mOWL2VecStarParser.scala:75\u001b[0m, in \u001b[0;36morg.mowl.Parsers.OWL2VecStarParser.parse\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mTraversable.scala:104\u001b[0m, in \u001b[0;36mscala.collection.AbstractTraversable.flatMap\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mTraversableLike.scala:241\u001b[0m, in \u001b[0;36mscala.collection.TraversableLike$class.flatMap\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mListBuffer.scala:45\u001b[0m, in \u001b[0;36mscala.collection.mutable.ListBuffer.foreach\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mTraversableForwarder.scala:35\u001b[0m, in \u001b[0;36mscala.collection.generic.TraversableForwarder$class.foreach\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mList.scala:392\u001b[0m, in \u001b[0;36mscala.collection.immutable.List.foreach\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mTraversableLike.scala:241\u001b[0m, in \u001b[0;36mscala.collection.TraversableLike$$anonfun$flatMap$1.apply\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mTraversableLike.scala:241\u001b[0m, in \u001b[0;36mscala.collection.TraversableLike$$anonfun$flatMap$1.apply\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mOWL2VecStarParser.scala:76\u001b[0m, in \u001b[0;36morg.mowl.Parsers.OWL2VecStarParser$$anonfun$2.apply\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mOWL2VecStarParser.scala:81\u001b[0m, in \u001b[0;36morg.mowl.Parsers.OWL2VecStarParser$$anonfun$2.apply\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mList.scala:338\u001b[0m, in \u001b[0;36mscala.collection.immutable.List.flatMap\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mOWL2VecStarParser.scala:81\u001b[0m, in \u001b[0;36morg.mowl.Parsers.OWL2VecStarParser$$anonfun$2$$anonfun$apply$1.apply\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mOWL2VecStarParser.scala:81\u001b[0m, in \u001b[0;36morg.mowl.Parsers.OWL2VecStarParser$$anonfun$2$$anonfun$apply$1.apply\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mOWLOntologyManagerImpl.java:1206\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyManagerImpl.loadOntologyFromOntologyDocument\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mOWLOntologyManagerImpl.java:1194\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyManagerImpl.loadOntologyFromOntologyDocument\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mOWLOntologyManagerImpl.java:1243\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyManagerImpl.loadOntology\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mOWLOntologyManagerImpl.java:1303\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyManagerImpl.actualParse\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mOWLOntologyFactoryImpl.java:220\u001b[0m, in \u001b[0;36muk.ac.manchester.cs.owl.owlapi.OWLOntologyFactoryImpl.loadOWLOntology\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mRDFXMLParser.java:70\u001b[0m, in \u001b[0;36morg.semanticweb.owlapi.rdf.rdfxml.parser.RDFXMLParser.parse\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mAbstractOWLParser.java:268\u001b[0m, in \u001b[0;36morg.semanticweb.owlapi.io.AbstractOWLParser.getInputSource\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mFileDocumentSource.java:105\u001b[0m, in \u001b[0;36morg.semanticweb.owlapi.io.FileDocumentSource.getReader\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mFileDocumentSource.java:93\u001b[0m, in \u001b[0;36morg.semanticweb.owlapi.io.FileDocumentSource.getInputStream\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;31mException\u001b[0m: Java Exception",
       "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mjava.lang.ClassCastException\u001b[0m              Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Github/mowl/mowl/examples/OWL2Vec/../../../mowl/embeddings/graph_based/owl2vec/model.py:89\u001b[0m, in \u001b[0;36mOWL2VecStar.train\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     86\u001b[0m save_walks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     88\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGenerating graph from ontology...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 89\u001b[0m edges \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparserTrain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     90\u001b[0m entities, _ \u001b[38;5;241m=\u001b[39m Edge\u001b[38;5;241m.\u001b[39mgetEntitiesAndRelations(edges)\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mentities \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(entities)\n",
-      "File \u001b[0;32m~/Github/mowl/mowl/examples/OWL2Vec/../../../mowl/graph/owl2vec_star/model.py:30\u001b[0m, in \u001b[0;36mOWL2VecStarParser.parse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mparse\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 30\u001b[0m     edges \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m     edges \u001b[38;5;241m=\u001b[39m[Edge(\u001b[38;5;28mstr\u001b[39m(e\u001b[38;5;241m.\u001b[39msrc()), \u001b[38;5;28mstr\u001b[39m(e\u001b[38;5;241m.\u001b[39mrel()), \u001b[38;5;28mstr\u001b[39m(e\u001b[38;5;241m.\u001b[39mdst())) \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m edges]\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m edges\n",
-      "\u001b[0;31mjava.lang.ClassCastException\u001b[0m: java.lang.ClassCastException: class uk.ac.manchester.cs.owl.owlapi.OWLObjectIntersectionOfImpl cannot be cast to class org.semanticweb.owlapi.model.OWLClass (uk.ac.manchester.cs.owl.owlapi.OWLObjectIntersectionOfImpl and org.semanticweb.owlapi.model.OWLClass are in unnamed module of loader 'app')"
+      "\u001b[0;31morg.semanticweb.owlapi.io.OWLOntologyInputSourceException\u001b[0mTraceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Github/mowl/mowl/examples/OWL2Vec/../../../mowl/embeddings/graph_based/owl2vec/model.py:92\u001b[0m, in \u001b[0;36mOWL2VecStar.train\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     89\u001b[0m save_walks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     91\u001b[0m logging\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGenerating graph from ontology...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 92\u001b[0m edges \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprojector\u001b[38;5;241m.\u001b[39mproject(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43montology\u001b[49m)\n\u001b[1;32m     93\u001b[0m entities, _ \u001b[38;5;241m=\u001b[39m Edge\u001b[38;5;241m.\u001b[39mgetEntitiesAndRelations(edges)\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mentities \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(entities)\n",
+      "File \u001b[0;32m~/Github/mowl/mowl/examples/OWL2Vec/../../../mowl/datasets/base.py:70\u001b[0m, in \u001b[0;36mPathDataset.ontology\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21montology\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_loaded:\n\u001b[0;32m---> 70\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_load\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_ontology\n",
+      "File \u001b[0;32m~/Github/mowl/mowl/examples/OWL2Vec/../../../mowl/datasets/base.py:88\u001b[0m, in \u001b[0;36mPathDataset._load\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_load\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 88\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_ontology \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mont_manager\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloadOntologyFromOntologyDocument\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     89\u001b[0m \u001b[43m        \u001b[49m\u001b[43mjava\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43montology_path\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     90\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalidation_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     91\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validation \u001b[38;5;241m=\u001b[39m  \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mont_manager\u001b[38;5;241m.\u001b[39mloadOntologyFromOntologyDocument(\n\u001b[1;32m     92\u001b[0m             java\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mFile(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalidation_path))\n",
+      "\u001b[0;31morg.semanticweb.owlapi.io.OWLOntologyInputSourceException\u001b[0m: org.semanticweb.owlapi.io.OWLOntologyInputSourceException: java.io.FileNotFoundException: data/mp.owl (No such file or directory)"
      ]
     }
    ],
@@ -1403,7 +1405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
