--- a/mowl/examples/Walking/Walking.ipynb
+++ b/mowl/examples/Walking/Walking.ipynb
@@ -10,33 +10,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "6dad3ff1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../../../\")\n",
-    "\n",
+    "import mowl\n",
+    "mowl.init_jvm(\"3g\")\n",
     "import torch as th\n",
     "\n",
     "from mowl.datasets.ppi_yeast import PPIYeastSlimDataset\n",
     "\n",
-    "from mowl.embeddings.graph_based.dl2vec.model import DL2Vec\n",
     "from gensim.models import Word2Vec\n",
     "import pickle as pkl\n",
     "import numpy as np\n",
     "from sklearn.manifold import TSNE\n",
     "import matplotlib.pyplot as plt\n",
-    "from mowl.graph.factory import parser_factory\n",
-    "from mowl.graph.edge import Edge\n",
+    "from mowl.projection.factory import projector_factory\n",
+    "from mowl.projection.edge import Edge\n",
     "\n",
     "\n",
     "import gensim\n",
     "import logging\n",
     "import time\n",
     "\n",
-    "logging.basicConfig(set_level = logging.INFO)\n"
+    "logging.basicConfig(level = logging.INFO)\n"
    ]
   },
   {
@@ -1852,9 +1852,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mowlTest",
+   "display_name": "mowldev",
    "language": "python",
-   "name": "mowltest"
+   "name": "mowldev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1866,7 +1866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
