--- a/docs/source/examples/zsl/plot_1_deepgozero.ipynb
+++ b/docs/source/examples/zsl/plot_1_deepgozero.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# DeepGOZero\n\nThis example corresponds to the paper [DeepGOZero: improving protein function prediction from sequence and zero-shot learning based on ontology axioms](https://doi.org/10.1093/bioinformatics/btac256). DeepGOZero is a machine learning model that performs protein function prediction for functions that have small number or zero annotations.\n"
+        "\n# DeepGOZero\n\nThis example corresponds to the paper `DeepGOZero: improving protein function prediction from sequence and zero-shot learning based on ontology axioms <https://doi.org/10.1093/bioinformatics/btac256>`_. DeepGOZero is a machine learning model that performs protein function prediction for functions that have small number or zero annotations.\n"
       ]
     },
     {
@@ -161,7 +161,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.10"
     }
   },
   "nbformat": 4,
