--- a/docs/source/examples/syntactic/plot_1_onto2vec.ipynb
+++ b/docs/source/examples/syntactic/plot_1_onto2vec.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Onto2Vec\n\nThis example corresponds to the paper [Onto2Vec: joint vector-based representation of biological entities and their ontology-based annotations](https://doi.org/10.1093/bioinformatics/bty259). \n\nThis method is an approach to learn numerical representations (embeddings) of (biomedical) ontologies by representing ontology axioms as text sequences and applying an unsupervised learning algorithm such as Word2Vec. Onto2Vec uses an ontology reasoner to infer new axioms as \na preprocessing step. The algorithm is tested on the protein-protein interaction task.\n"
+        "\n# Onto2Vec\n\nThis example corresponds to the paper `Onto2Vec: joint vector-based representation of biological entities and their ontology-based annotations <https://doi.org/10.1093/bioinformatics/bty259>`_. \n\nThis method is an approach to learn numerical representations (embeddings) of (biomedical) ontologies by representing ontology axioms as text sequences and applying an unsupervised learning algorithm such as Word2Vec. Onto2Vec uses an ontology reasoner to infer new axioms as \na preprocessing step. The algorithm is tested on the protein-protein interaction task.\n"
       ]
     },
     {
@@ -143,7 +143,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.10"
     }
   },
   "nbformat": 4,
