:memo: updated docs for v0.2.0

--- a/docs/source/examples/elmodels/plot_2_elboxembeddings.ipynb
+++ b/docs/source/examples/elmodels/plot_2_elboxembeddings.ipynb
@@ -22,7 +22,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "This example is quite similar to the one found in :doc:`/examples/elmodels/plot_1_elembeddings`.\nThere might be slight changes in the training part but the most important changes are in the\n`Definition of loss functions`_ definition of the loss functions for each normal form.\n\n"
+        "This example is quite similar to the one found in :doc:`/examples/elmodels/plot_1_elembeddings`.\nThere might be slight changes in the training part but the most important changes are in the\ndefinition of loss functions definition of the loss functions for each normal form.\n\n"
       ]
     },
     {
@@ -103,7 +103,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.8.16"
     }
   },
   "nbformat": 4,
