:memo: updated docs for v.1.0.0

--- a/docs/source/examples/elmodels/plot_1_elembeddings.ipynb
+++ b/docs/source/examples/elmodels/plot_1_elembeddings.ipynb
@@ -33,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "import mowl\nmowl.init_jvm(\"10g\")\nimport numpy as np\nimport torch as th\nfrom torch import nn\nfrom tqdm import trange"
+        "import mowl\nmowl.init_jvm(\"10g\")\nimport torch as th"
       ]
     },
     {
@@ -83,7 +83,7 @@
       },
       "outputs": [],
       "source": [
-        "from mowl.evaluation.rank_based import ModelRankBasedEvaluator\n\nwith th.no_grad():                                                                        \n    model.load_best_model()                                                               \n    evaluator = ModelRankBasedEvaluator(                                                  \n        model,                                                                            \n        device = \"cpu\",\n        eval_method = model.model.gci2_loss                                               \n    )                                                                                         \n                                                                                                  \n    evaluator.evaluate(show=True)"
+        "from mowl.evaluation.rank_based import ModelRankBasedEvaluator\n\nwith th.no_grad():                                                                        \n    model.load_best_model()                                                               \n    evaluator = ModelRankBasedEvaluator(                                                  \n        model,                                                                            \n        device = \"cpu\",\n        eval_method = model.eval_method\n    )                                                                                         \n                                                                                                  \n    evaluator.evaluate(show=True)"
       ]
     }
   ],
