--- a/docs/source/examples/elmodels/plot_2_elboxembeddings.ipynb
+++ b/docs/source/examples/elmodels/plot_2_elboxembeddings.ipynb
@@ -33,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "import mowl\nmowl.init_jvm(\"10g\")\n\nfrom mowl.base_models.elmodel import EmbeddingELModel\nimport mowl.models.elboxembeddings.losses as L\nfrom mowl.nn.elmodule import ELModule\nimport math\nimport logging\nimport numpy as np\n\nfrom mowl.models.elboxembeddings.evaluate import ELBoxEmbeddingsPPIEvaluator\nfrom mowl.projection import TaxonomyWithRelationsProjector\n    \nfrom tqdm import trange, tqdm\n\nimport torch as th\nfrom torch import nn"
+        "import mowl\nmowl.init_jvm(\"10g\")\nimport torch as th"
       ]
     },
     {
@@ -65,7 +65,7 @@
       },
       "outputs": [],
       "source": [
-        "from mowl.datasets.builtin import PPIYeastSlimDataset\n\ndataset = PPIYeastSlimDataset()\n\nmodel = ELBoxEmbeddings(dataset,\n                     embed_dim=50,\n                     margin=-0.05,\n                     reg_norm=1,\n                     learning_rate=0.001,\n                     epochs=10000,\n                     batch_size=4096,\n                     model_filepath=None,\n                     device='cpu')\n\nmodel.train()"
+        "from mowl.datasets.builtin import PPIYeastSlimDataset\nfrom mowl.models.elboxembeddings.examples.model_ppi import ELBoxPPI\n\ndataset = PPIYeastSlimDataset()\n\nmodel = ELBoxEmbeddings(dataset,\n                     embed_dim=50,\n                     margin=-0.05,\n                     reg_norm=1,\n                     learning_rate=0.001,\n                     epochs=10000,\n                     batch_size=4096,\n                     model_filepath=None,\n                     device='cpu')\n\nmodel.train()"
       ]
     },
     {
@@ -83,7 +83,7 @@
       },
       "outputs": [],
       "source": [
-        "from mowl.evaluation.rank_based import ModelRankBasedEvaluator\n\nwith th.no_grad():                                                                        \n    model.load_best_model()                                                               \n    evaluator = ModelRankBasedEvaluator(                                                  \n        model,                                                                            \n        device = \"cpu\",\n        eval_method = model.model.gci2_loss                                               \n    )                                                                                         \n                                                                                                  \n    evaluator.evaluate(show=True)"
+        "from mowl.evaluation.rank_based import ModelRankBasedEvaluator\n\nwith th.no_grad():                                                                        \n    model.load_best_model()                                                               \n    evaluator = ModelRankBasedEvaluator(                                                  \n        model,                                                                            \n        device = \"cpu\",\n        eval_method = model.eval_method,\n    )                                                                                         \n                                                                                                  \n    evaluator.evaluate(show=True)"
       ]
     }
   ],
