--- a/docs/source/examples/syntactic/plot_2_opa2vec.ipynb
+++ b/docs/source/examples/syntactic/plot_2_opa2vec.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# OPA2Vec\n\nThis example corresponds to the paper `OPA2Vec: combining formal and informal content of biomedical ontologies to improve similarity-based prediction <https://doi.org/10.1093/bioinformatics/bty933>`_. \n\nThis method is an extension of Onto2Vec that apart from formal knowldege (i.e. axioms) it also uses informal knowledge such as entity metadata (i.e. synonyms, definitions, etc.)\n"
+        "\n# OPA2Vec\n\nThis example corresponds to the paper [OPA2Vec: combining formal and informal content of biomedical ontologies to improve similarity-based prediction](https://doi.org/10.1093/bioinformatics/bty933). \n\nThis method is an extension of Onto2Vec that apart from formal knowldege (i.e. axioms) it also uses informal knowledge such as entity metadata (i.e. synonyms, definitions, etc.)\n"
       ]
     },
     {
@@ -143,7 +143,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.10"
+      "version": "3.8.16"
     }
   },
   "nbformat": 4,
