:memo: Updated documentation for new version

--- a/docs/source/examples/elmodels/plot_2_elboxembeddings.ipynb
+++ b/docs/source/examples/elmodels/plot_2_elboxembeddings.ipynb
@@ -65,7 +65,7 @@
       },
       "outputs": [],
       "source": [
-        "from mowl.datasets.builtin import PPIYeastSlimDataset\nfrom mowl.models.elboxembeddings.examples.model_ppi import ELBoxPPI\n\ndataset = PPIYeastSlimDataset()\n\nmodel = ELBoxEmbeddings(dataset,\n                     embed_dim=50,\n                     margin=-0.05,\n                     reg_norm=1,\n                     learning_rate=0.001,\n                     epochs=10000,\n                     batch_size=4096,\n                     model_filepath=None,\n                     device='cpu')\n\nmodel.train()"
+        "from mowl.datasets.builtin import PPIYeastSlimDataset\nfrom mowl.models.elboxembeddings.examples.model_ppi import ELBoxPPI\n\ndataset = PPIYeastSlimDataset()\n\nmodel = ELBoxPPI(dataset,\n                 embed_dim=30,\n                 margin=-0.05,\n                 reg_norm=1,\n                 learning_rate=0.001,\n                 epochs=200,\n                 batch_size=4096,\n                 model_filepath=None,\n                 device='cpu')\n\nmodel.train()"
       ]
     },
     {
