:memo: update docs

--- a/docs/source/examples/elmodels/plot_1_elembeddings.ipynb
+++ b/docs/source/examples/elmodels/plot_1_elembeddings.ipynb
@@ -72,7 +72,7 @@
       },
       "outputs": [],
       "source": [
-        "from mowl.evaluation.rank_based import ModelRankBasedEvaluator\n\nwith th.no_grad():                                                                        \n    model.load_best_model()                                                               \n    evaluator = ModelRankBasedEvaluator(                                                  \n        model,                                                                            \n        device = \"cpu\",\n        eval_method = model.eval_method\n    )                                                                                         \n                                                                                                  \n    evaluator.evaluate(show=True)"
+        "from mowl.evaluation import PPIEvaluator\n\nmodel.set_evaluator(PPIEvaluator)\nmodel.evaluate()"
       ]
     }
   ],
