--- a/docs/source/examples/graph_based/plot_1_dl2vec.ipynb
+++ b/docs/source/examples/graph_based/plot_1_dl2vec.ipynb
@@ -1,17 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "%matplotlib inline"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -33,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import sys\nsys.path.append('../../')\nimport mowl\nmowl.init_jvm(\"10g\")\n\nfrom mowl.datasets.builtin import GDAMouseDataset\nfrom mowl.projection import DL2VecProjector\nfrom mowl.walking import DeepWalk\nfrom gensim.models.word2vec import LineSentence\nfrom gensim.models import Word2Vec"
+        "import sys\nsys.path.append('../../')\nimport mowl\nmowl.init_jvm(\"10g\")\n\nfrom mowl.datasets.builtin import GDADatasetV2\nfrom mowl.models import RandomWalkPlusW2VModel\nfrom mowl.projection import DL2VecProjector\nfrom mowl.walking import DeepWalk\nfrom gensim.models.word2vec import LineSentence\nfrom gensim.models import Word2Vec"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Projecting the ontology\n\nWe project the ontology using the DL2VecProjector class. The rules used to project the \nontology can be found at :doc:`/graphs/projection`. The outcome of the projection algorithm\nis an edgelist.\n\n"
+        "Instantiating the dataset and the model\n\n"
       ]
     },
     {
@@ -51,14 +40,14 @@
       },
       "outputs": [],
       "source": [
-        "dataset = GDAMouseDataset()\n\nprojector = DL2VecProjector(bidirectional_taxonomy=True)\nedges = projector.project(dataset.ontology)"
+        "dataset = GDADatasetV2()\n\nprint(f\"Number of classes: f{len(dataset.classes)}\")\n\nmodel = RandomWalkPlusW2VModel(dataset)\nmodel.set_projector(DL2VecProjector())\nmodel.set_walker(DeepWalk(5, 5, 0.1, workers=4))\nmodel.set_w2v_model(vector_size=5, epochs=2, window=5, min_count=1, workers=4)\nmodel.train()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Generating random walks\n\nThe random walks are generated using the DeepWalk class. This class implements the DeepWalk\nalgorithm with a modification consisting of including the edge labels as part of the walks.\n\n"
+        "Evaluating the model\n\n"
       ]
     },
     {
@@ -69,79 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "walker = DeepWalk(20, # number of walks per node\n                  20, # walk length\n                  0.1, # restart probability\n                  workers=4) # number of threads\n\nwalks = walker.walk(edges)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Training the Word2Vec model\n\nTo train the Word2Vec model, we rely on the Gensim library:\n\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "walks_file = walker.outfile\nsentences = LineSentence(walks_file)\nmodel = Word2Vec(sentences, vector_size=100, epochs = 20, window=5, min_count=1, workers=4)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Evaluating the embeddings\n\nWe can evaluate the embeddings using the\n:class:`EmbeddingsRankBasedEvaluator <mowl.evaluation.rank_based.EmbeddingsRankBasedEvaluator>`\nclass. We need to do some data preparation.\n\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "from mowl.evaluation.rank_based import EmbeddingsRankBasedEvaluator\nfrom mowl.evaluation.base import CosineSimilarity\nfrom mowl.projection import TaxonomyWithRelationsProjector"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "We are going to evaluate the plausability of an association gene-disease with a gene against all\npossible diseases and check the rank of the true disease association.\n\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "genes, diseases = dataset.evaluation_classes\n\nprojector = TaxonomyWithRelationsProjector(taxonomy=False,\n                                           relations=[\"http://is_associated_with\"])\n\nevaluation_edges = projector.project(dataset.testing)\nfiltering_edges = projector.project(dataset.ontology)\nassert len(evaluation_edges) > 0"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "The gene-disease associations will be scoredc using cosine similarity. For that reason we use\nthe ``CosineSimilarity`` class.\n\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "vectors = model.wv\nevaluator = EmbeddingsRankBasedEvaluator(\n    vectors,\n    evaluation_edges,\n    CosineSimilarity,\n    training_set=filtering_edges,\n    head_entities = genes.as_str,\n    tail_entities = diseases.as_str,\n    device = 'cpu'\n)\n\nevaluator.evaluate(show=True)"
+        "from mowl.evaluation import GDAEvaluator\nmodel.set_evaluator(GDAEvaluator)\nmodel.evaluate()"
       ]
     }
   ],
@@ -161,7 +78,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.16"
+      "version": "3.9.19"
     }
   },
   "nbformat": 4,
