--- a/docs/source/examples/syntactic/plot_2_opa2vec.ipynb
+++ b/docs/source/examples/syntactic/plot_2_opa2vec.ipynb
@@ -1,17 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "%matplotlib inline"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -105,7 +94,7 @@
       },
       "outputs": [],
       "source": [
-        "extract_and_save_axiom_corpus(dataset.ontology, \"opa2vec_corpus.txt\")\nextract_and_save_annotation_corpus(dataset.ontology, \"opa2vec_corpus.txt\", mode=\"a\")\n\nsentences = LineSentence(\"opa2vec_corpus.txt\")\nmodel = Word2Vec(sentences, vector_size=5, window=2, min_count=1, workers=4)"
+        "extract_and_save_axiom_corpus(dataset.ontology, \"opa2vec_corpus.txt\")\nextract_and_save_annotation_corpus(dataset.ontology, \"opa2vec_corpus.txt\", mode=\"a\")\n\nsentences = LineSentence(\"opa2vec_corpus.txt\")\nmodel = Word2Vec(sentences, vector_size=5, window=2, min_count=1, workers=4, epochs=2)"
       ]
     },
     {
@@ -143,7 +132,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.16"
+      "version": "3.9.19"
     }
   },
   "nbformat": 4,
