--- a/docs/source/examples/elmodels/plot_1_elembeddings.ipynb
+++ b/docs/source/examples/elmodels/plot_1_elembeddings.ipynb
@@ -54,7 +54,7 @@
       },
       "outputs": [],
       "source": [
-        "from mowl.datasets.builtin import PPIYeastSlimDataset\nfrom mowl.models.elembeddings.examples.model_ppi import ELEmPPI\n\ndataset = PPIYeastSlimDataset()\n\nmodel = ELEmPPI(dataset,\n                embed_dim=30,\n                margin=0.1,\n                reg_norm=1,\n                learning_rate=0.001,\n                epochs=20,\n                batch_size=4096,\n                model_filepath=None,\n                device='cpu')\n\nmodel.train()"
+        "from mowl.datasets.builtin import PPIYeastSlimDataset\nfrom mowl.models.elembeddings.examples.model_ppi import ELEmPPI\n\ndataset = PPIYeastSlimDataset()\n\nmodel = ELEmPPI(dataset,\n                embed_dim=30,\n                margin=0.1,\n                reg_norm=1,\n                learning_rate=0.001,\n                epochs=20,\n                batch_size=20000,\n                model_filepath=None,\n                device='cuda')\n\nmodel.train()"
       ]
     },
     {
@@ -72,7 +72,7 @@
       },
       "outputs": [],
       "source": [
-        "from mowl.evaluation import PPIEvaluator\n\nmodel.set_evaluator(PPIEvaluator)\nmodel.evaluate()"
+        "from mowl.evaluation import PPIEvaluator\n\nmodel.set_evaluator(PPIEvaluator)\nmodel.evaluate(dataset.testing)\n\nprint(model.metrics)"
       ]
     }
   ],
@@ -92,7 +92,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.19"
+      "version": "3.9.20"
     }
   },
   "nbformat": 4,
