--- a/docs/source/examples/graph_based/plot_1_dl2vec.ipynb
+++ b/docs/source/examples/graph_based/plot_1_dl2vec.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "from mowl.evaluation import GDAEvaluator\nmodel.set_evaluator(GDAEvaluator)\nmodel.evaluate()"
+        "from mowl.evaluation import GDAEvaluator\nmodel.set_evaluator(GDAEvaluator)\nmodel.evaluate(dataset.testing)"
       ]
     }
   ],
@@ -78,7 +78,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.19"
+      "version": "3.9.20"
     }
   },
   "nbformat": 4,
